Fix responsiveness of OrderList and z-index of Sidebar

--- a/src/components/styles/Sidebar.module.scss
+++ b/src/components/styles/Sidebar.module.scss
@@ -21,6 +21,8 @@
 .sidebar {
   width: 100dvw;
   height: $sidebar-height;
+
+  z-index: 999;
 }
 
 @media (min-width: map.get($grid-breakpoints, "md")) {
